изменено название папки портфолио интерфейс

--- a/sites/2_oksy-matthews/index.html
+++ b/sites/2_oksy-matthews/index.html
@@ -23,7 +23,7 @@
 	<!-- Базовые стили CSS -->
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/media.css">
-	<link rel="stylesheet" href="_portfolio interface/pi.css">
+	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
 <!-- portfolio interface -->
 <div class="yudevices">
@@ -33,14 +33,14 @@
 </div>
 <div class="yuchoise">
 	<div class="yuchoise__item yuchoise__item--desk yuchoise__item--active">
-		<img src="_portfolio interface/desktop-icon.svg">
+		<img src="portfolio-interface/desktop-icon.svg">
 	</div>
 	<div class="yuchoise__item yuchoise__item--mobile">
-		<img src="_portfolio interface/smartphone-call.svg">
+		<img src="portfolio-interface/smartphone-call.svg">
 	</div>
 </div>
 <a href="../../index.html" target="_blank" class="yuchoise__menu">
-	<img src="_portfolio interface/more.svg">
+	<img src="portfolio-interface/more.svg">
 </a>
 <!-- portfolio interface -->
 
@@ -1117,6 +1117,6 @@
 	<script>new WOW().init();</script>
 	<!-- Базовые скрипты javascript -->
 	<script src="js/main.js"></script>
-	<script src="_portfolio interface/pi.js"></script>
+	<script src="portfolio-interface/pi.js"></script>
 </body>
 </html>
