--- a/sites/1_new-lex/index.html
+++ b/sites/1_new-lex/index.html
@@ -36,9 +36,9 @@
 		<img src="portfolio-interface/smartphone-call.svg">
 	</div>
 </div>
-<div class="yuchoise__menu">
+<a href="../../index.html" target="_blank" class="yuchoise__menu">
 	<img src="portfolio-interface/more.svg">
-</div>
+</a>
 <!-- portfolio interface -->
 
 <body>
