fvoice - добавлен интерфейс адаптива

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="favicon.svg" type="image/x-icon">
+	<link rel="icon" href="favicon.png" type="image/x-icon">
 	<title>Портфолио Юрия Романова</title>
 	<!-- Slick slider CSS -->
 	<link rel="stylesheet" href="libs/slick-slider/slick.css">
@@ -17,9 +17,7 @@
 	<!-- Animate CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 	<!-- Базовые стили CSS -->
-	<link rel="stylesheet" href="css/fonts.css">
-	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/media.css">
+	<link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -29,6 +27,44 @@
 		<a href="sites/3_ef/index.html" target="_blank">Fulfilment</a>
 		<a href="sites/4_fvoice/index.html" target="_blank">Fvoice</a>
 	</div>
+
+	<div class="portfolio">
+		<div class="portfolio__box">
+			<div class="portfolio__item portfolio__item--new-lex">
+				<div class="portfolio__imgs">
+					<img src="img/new-lex/desktop.png">
+					<img src="img/new-lex/tablet.png">
+					<img src="img/new-lex/mobile.png">
+				</div>
+				<div class="portfolio__nav">
+					<div class="portfolio__title">
+						NEW LEX
+					</div>
+					<a href="#" class="portfolio__btn">
+						СМОТРЕТЬ
+					</a>
+				</div>
+			</div>
+			<div class="portfolio__item portfolio__item--oksy">
+				<div class="portfolio__imgs">
+					<img src="img/oksy/desktop.png">
+					<img src="img/oksy/tablet.png">
+					<img src="img/oksy/mobile.png">
+				</div>
+				<div class="portfolio__nav">
+					<div class="portfolio__title">
+						Oksy matthews
+					</div>
+					<a href="#" class="portfolio__btn">
+						СМОТРЕТЬ
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
 </body>
 
 </html>
