--- a/index.html
+++ b/index.html
@@ -26,45 +26,8 @@
 		<a href="sites/2_oksy-matthews/index.html" target="_blank">Oksy matthews</a>
 		<a href="sites/3_ef/index.html" target="_blank">Fulfilment</a>
 		<a href="sites/4_fvoice/index.html" target="_blank">Fvoice</a>
+		<a href="sites/7_per/index.html" target="_blank">Per</a>
 	</div>
-
-	<div class="portfolio">
-		<div class="portfolio__box">
-			<div class="portfolio__item portfolio__item--new-lex">
-				<div class="portfolio__imgs">
-					<img src="img/new-lex/desktop.png">
-					<img src="img/new-lex/tablet.png">
-					<img src="img/new-lex/mobile.png">
-				</div>
-				<div class="portfolio__nav">
-					<div class="portfolio__title">
-						NEW LEX
-					</div>
-					<a href="#" class="portfolio__btn">
-						СМОТРЕТЬ
-					</a>
-				</div>
-			</div>
-			<div class="portfolio__item portfolio__item--oksy">
-				<div class="portfolio__imgs">
-					<img src="img/oksy/desktop.png">
-					<img src="img/oksy/tablet.png">
-					<img src="img/oksy/mobile.png">
-				</div>
-				<div class="portfolio__nav">
-					<div class="portfolio__title">
-						Oksy matthews
-					</div>
-					<a href="#" class="portfolio__btn">
-						СМОТРЕТЬ
-					</a>
-				</div>
-			</div>
-		</div>
-	</div>
-
-
-
 </body>
 
 </html>
