--- a/sites/1_new-lex/index.html
+++ b/sites/1_new-lex/index.html
@@ -1285,15 +1285,15 @@
 	<!-- jQuery -->
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<!-- Slick slider JS -->
-	<script src="libs/slick-slider/slick.min.js"></script>
+	<script async src="libs/slick-slider/slick.min.js"></script>
 	<!-- Magnific Popup JS -->
-	<script src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>
+	<script async src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>
 	<!-- Wow js -->
-	<script src="js/wow.min.js"></script>
+	<script async src="js/wow.min.js"></script>
 	<script>new WOW().init();</script>
 	<!-- Базовые скрипты javascript -->
-	<script src="js/main.js"></script>
-	<script src="portfolio-interface/pi.js"></script>
+	<script async src="js/main.js"></script>
+	<script async src="portfolio-interface/pi.js"></script>
 </body>
 
 </html>
