new lex - удалены png изображения и другие лишние

--- a/sites/1_new-lex/index.html
+++ b/sites/1_new-lex/index.html
@@ -540,10 +540,7 @@
 			</div>
 		</div>
 	</section>
-
-
-
-
+	<!-- wem -->
 	<section class="wem">
 		<div class="container">
 			<h2 class="we__subtitle subtitle--def">
@@ -566,7 +563,7 @@
 							<div class="we__item we__item--first">
 								<div class="we__item-wrapper we__item-wrapper--dashed">
 									<div class="we__item-img">
-										<img src="img/we-img1.png">
+										<img src="img/we-img1.svg">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -586,7 +583,7 @@
 							<div class="we__item">
 								<div class="we__item-wrapper">
 									<div class="we__item-img">
-										<img src="img/we-img2.png">
+										<img src="img/we-img2.svg">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -606,7 +603,7 @@
 							<div class="we__item we__item--last">
 								<div class="we__item-wrapper">
 									<div class="we__item-img we__item-img--last">
-										<img src="img/we-img3.png">
+										<img src="img/we-img3.svg">
 									</div>
 									<div class="we__item-content we__item-content--last">
 										<div class="we__item-name we__item-name--last">
@@ -633,7 +630,7 @@
 							<div class="we__item we__item--first">
 								<div class="we__item-wrapper we__item-wrapper--dashed">
 									<div class="we__item-img">
-										<img src="img/we-img1.png">
+										<img src="img/we-img1.svg">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -653,7 +650,7 @@
 							<div class="we__item">
 								<div class="we__item-wrapper">
 									<div class="we__item-img">
-										<img src="img/we-img2.png">
+										<img src="img/we-img2.svg">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -673,7 +670,7 @@
 							<div class="we__item we__item--last">
 								<div class="we__item-wrapper">
 									<div class="we__item-img we__item-img--last">
-										<img src="img/we-img3.png">
+										<img src="img/we-img3.svg">
 									</div>
 									<div class="we__item-content we__item-content--last">
 										<div class="we__item-name we__item-name--last">
@@ -700,7 +697,7 @@
 							<div class="we__item we__item--first">
 								<div class="we__item-wrapper we__item-wrapper--dashed">
 									<div class="we__item-img">
-										<img src="img/we-img1.png">
+										<img src="img/we-img1.svg">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -720,7 +717,7 @@
 							<div class="we__item">
 								<div class="we__item-wrapper">
 									<div class="we__item-img">
-										<img src="img/we-img2.png">
+										<img src="img/we-img2.svg">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -740,7 +737,7 @@
 							<div class="we__item we__item--last">
 								<div class="we__item-wrapper">
 									<div class="we__item-img we__item-img--last">
-										<img src="img/we-img3.png">
+										<img src="img/we-img3.svg">
 									</div>
 									<div class="we__item-content we__item-content--last">
 										<div class="we__item-name we__item-name--last">
@@ -767,7 +764,7 @@
 							<div class="we__item we__item--first">
 								<div class="we__item-wrapper we__item-wrapper--dashed">
 									<div class="we__item-img">
-										<img src="img/we-img1.png">
+										<img src="img/we-img1.svg">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -787,7 +784,7 @@
 							<div class="we__item">
 								<div class="we__item-wrapper">
 									<div class="we__item-img">
-										<img src="img/we-img2.png">
+										<img src="img/we-img2.svg">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -807,7 +804,7 @@
 							<div class="we__item we__item--last">
 								<div class="we__item-wrapper">
 									<div class="we__item-img we__item-img--last">
-										<img src="img/we-img3.png">
+										<img src="img/we-img3.svg">
 									</div>
 									<div class="we__item-content we__item-content--last">
 										<div class="we__item-name we__item-name--last">
@@ -828,10 +825,7 @@
 			</div>
 		</div>
 	</section>
-
-
-
-
+	<!-- start -->
 	<section class="start">
 		<div class="container">
 			<h2 class="start__subtitle subtitle--def">
@@ -911,10 +905,7 @@
 			</div>
 		</div>
 	</section>
-
-
-
-
+	<!-- work -->
 	<section class="work">
 		<div class="container">
 			<div class="work__title-area">
@@ -1021,9 +1012,7 @@
 			</div>
 		</div>
 	</section>
-
-
-
+	<!-- why -->
 	<section class="why">
 		<div class="container">
 			<h2 class="why__subtitle subtitle--def">
@@ -1065,8 +1054,7 @@
 			</div>
 		</div>
 	</section>
-
-
+	<!-- ask -->
 	<section class="ask">
 		<div class="container">
 			<div class="ask__wrapper animate__animated wow animate__pulse">
@@ -1090,9 +1078,7 @@
 			</div>
 		</div>
 	</section>
-
-
-
+	<!-- serv -->
 	<section class="serv">
 		<div class="container">
 			<div class="serv__wrapper serv__wrapper--first">
@@ -1125,9 +1111,7 @@
 			</div>
 		</div>
 	</section>
-
-
-
+	<!-- serv--inc -->
 	<section class="serv serv--inc">
 		<div class="container">
 			<div class="serv__wrapper serv__wrapper--second">
@@ -1157,6 +1141,7 @@
 			</div>
 		</div>
 	</section>
+	<!-- inter -->
 	<section class="inter">
 		<div class="container">
 			<div class="inter__title-area">
@@ -1201,6 +1186,7 @@
 			</div>
 		</div>
 	</section>
+	<!-- footer -->
 	<footer class="footer">
 		<div class="container">
 			<div class="footer__top">
@@ -1255,9 +1241,7 @@
 			</div>
 		</div>
 	</footer>
-
-
-
+	<!-- popup -->
 	<div class="hidden">
 		<form class="popup" id="popup">
 			<div class="popup__title">
@@ -1279,9 +1263,6 @@
 			</div>
 		</form>
 	</div>
-
-
-
 	<!-- jQuery -->
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<!-- Slick slider JS -->
@@ -1294,6 +1275,7 @@
 	<!-- Базовые скрипты javascript -->
 	<script async src="js/main.js"></script>
 	<script async src="portfolio-interface/pi.js"></script>
+	<script async src="js/lazysizes.min.js"></script>
 </body>
 
 </html>
