--- a/sites/1_new-lex/index.html
+++ b/sites/1_new-lex/index.html
@@ -77,7 +77,7 @@
 						</li>
 					</ul>
 					<div class="header__nav-close">
-						<img src="img/close-icon.png">
+						<img src="img/close-icon.svg">
 					</div>
 					<div class="header__nav-socials">
 						<a href="#" class="header__nav-link">
@@ -1234,7 +1234,7 @@
 				</div>
 				<a target="_blank" href="https://gasfort.ru/" class="footer-gasfort">
 					<div class="footer-gasfort_img">
-						<img src="img/gasfort.png" alt="gasfort">
+						<img src="img/gasfort.svg" alt="gasfort">
 					</div>
 					<span>Разработчик сайта</span>
 				</a>
