new lex - gasfort сделано lazyload

--- a/sites/1_new-lex/index.html
+++ b/sites/1_new-lex/index.html
@@ -1234,7 +1234,7 @@
 				</div>
 				<a target="_blank" href="https://gasfort.ru/" class="footer-gasfort">
 					<div class="footer-gasfort_img">
-						<img src="img/gasfort.svg" alt="gasfort">
+						<img data-src="img/gasfort.svg" alt="gasfort" class="lazyload">
 					</div>
 					<span>Разработчик сайта</span>
 				</a>
