new lex - отложена загрузка iframe

--- a/sites/1_new-lex/index.html
+++ b/sites/1_new-lex/index.html
@@ -25,7 +25,7 @@
 <!-- portfolio interface -->
 <div class="yudevices">
 	<div class="yudevices__phone">
-		<iframe src="index_mobile.html"></iframe>
+		<iframe loading="lazy" src="index_mobile.html"></iframe>
 	</div>
 </div>
 <div class="yuchoise">
