new lex - lazyload для всех изображений

--- a/sites/1_new-lex/index.html
+++ b/sites/1_new-lex/index.html
@@ -30,14 +30,14 @@
 </div>
 <div class="yuchoise">
 	<div class="yuchoise__item yuchoise__item--desk yuchoise__item--active">
-		<img src="portfolio-interface/desktop-icon.svg">
+		<img data-src="portfolio-interface/desktop-icon.svg" class="lazyload">
 	</div>
 	<div class="yuchoise__item yuchoise__item--mobile">
-		<img src="portfolio-interface/smartphone-call.svg">
+		<img data-src="portfolio-interface/smartphone-call.svg" class="lazyload">
 	</div>
 </div>
 <a href="../../index.html" target="_blank" class="yuchoise__menu">
-	<img src="portfolio-interface/more.svg">
+	<img data-src="portfolio-interface/more.svg" class="lazyload">
 </a>
 <!-- portfolio interface -->
 
@@ -77,7 +77,7 @@
 						</li>
 					</ul>
 					<div class="header__nav-close">
-						<img src="img/close-icon.svg">
+						<img data-src="img/close-icon.svg" class="lazyload">
 					</div>
 					<div class="header__nav-socials">
 						<a href="#" class="header__nav-link">
@@ -176,7 +176,7 @@
 						</h2>
 					</div>
 					<div class="how__img">
-						<img src="img/how-img.svg">
+						<img data-src="img/how-img.svg" class="lazyload">
 					</div>
 				</div>
 				<div class="how__right animate__fadeInRight animate__animated wow">
@@ -286,7 +286,7 @@
 								<div class="we__item we__item--first">
 									<div class="we__item-wrapper we__item-wrapper--dashed">
 										<div class="we__item-img">
-											<img src="img/we-img1.svg">
+											<img data-src="img/we-img1.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -306,7 +306,7 @@
 								<div class="we__item">
 									<div class="we__item-wrapper">
 										<div class="we__item-img">
-											<img src="img/we-img2.svg">
+											<img data-src="img/we-img2.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -326,7 +326,7 @@
 								<div class="we__item we__item--last">
 									<div class="we__item-wrapper">
 										<div class="we__item-img we__item-img--last">
-											<img src="img/we-img3.svg">
+											<img data-src="img/we-img3.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name we__item-name--last">
@@ -350,7 +350,7 @@
 								<div class="we__item we__item--first">
 									<div class="we__item-wrapper we__item-wrapper--dashed">
 										<div class="we__item-img">
-											<img src="img/we-img1.svg">
+											<img data-src="img/we-img1.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -370,7 +370,7 @@
 								<div class="we__item">
 									<div class="we__item-wrapper">
 										<div class="we__item-img">
-											<img src="img/we-img2.svg">
+											<img data-src="img/we-img2.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -390,7 +390,7 @@
 								<div class="we__item we__item--last">
 									<div class="we__item-wrapper">
 										<div class="we__item-img we__item-img--last">
-											<img src="img/we-img3.svg">
+											<img data-src="img/we-img3.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name we__item-name--last">
@@ -414,7 +414,7 @@
 								<div class="we__item we__item--first">
 									<div class="we__item-wrapper we__item-wrapper--dashed">
 										<div class="we__item-img">
-											<img src="img/we-img1.svg">
+											<img data-src="img/we-img1.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -434,7 +434,7 @@
 								<div class="we__item">
 									<div class="we__item-wrapper">
 										<div class="we__item-img">
-											<img src="img/we-img2.svg">
+											<img data-src="img/we-img2.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -454,7 +454,7 @@
 								<div class="we__item we__item--last">
 									<div class="we__item-wrapper">
 										<div class="we__item-img we__item-img--last">
-											<img src="img/we-img3.svg">
+											<img data-src="img/we-img3.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name we__item-name--last">
@@ -478,7 +478,7 @@
 								<div class="we__item we__item--first">
 									<div class="we__item-wrapper we__item-wrapper--dashed">
 										<div class="we__item-img">
-											<img src="img/we-img1.svg">
+											<img data-src="img/we-img1.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -498,7 +498,7 @@
 								<div class="we__item">
 									<div class="we__item-wrapper">
 										<div class="we__item-img">
-											<img src="img/we-img2.svg">
+											<img data-src="img/we-img2.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name">
@@ -518,7 +518,7 @@
 								<div class="we__item we__item--last">
 									<div class="we__item-wrapper">
 										<div class="we__item-img we__item-img--last">
-											<img src="img/we-img3.svg">
+											<img data-src="img/we-img3.svg" class="lazyload">
 										</div>
 										<div class="we__item-content">
 											<div class="we__item-name we__item-name--last">
@@ -563,7 +563,7 @@
 							<div class="we__item we__item--first">
 								<div class="we__item-wrapper we__item-wrapper--dashed">
 									<div class="we__item-img">
-										<img src="img/we-img1.svg">
+										<img data-src="img/we-img1.svg" class="lazyload">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -583,7 +583,7 @@
 							<div class="we__item">
 								<div class="we__item-wrapper">
 									<div class="we__item-img">
-										<img src="img/we-img2.svg">
+										<img data-src="img/we-img2.svg" class="lazyload">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -603,7 +603,7 @@
 							<div class="we__item we__item--last">
 								<div class="we__item-wrapper">
 									<div class="we__item-img we__item-img--last">
-										<img src="img/we-img3.svg">
+										<img data-src="img/we-img3.svg" class="lazyload">
 									</div>
 									<div class="we__item-content we__item-content--last">
 										<div class="we__item-name we__item-name--last">
@@ -630,7 +630,7 @@
 							<div class="we__item we__item--first">
 								<div class="we__item-wrapper we__item-wrapper--dashed">
 									<div class="we__item-img">
-										<img src="img/we-img1.svg">
+										<img data-src="img/we-img1.svg" class="lazyload">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -650,7 +650,7 @@
 							<div class="we__item">
 								<div class="we__item-wrapper">
 									<div class="we__item-img">
-										<img src="img/we-img2.svg">
+										<img data-src="img/we-img2.svg" class="lazyload">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -670,7 +670,7 @@
 							<div class="we__item we__item--last">
 								<div class="we__item-wrapper">
 									<div class="we__item-img we__item-img--last">
-										<img src="img/we-img3.svg">
+										<img data-src="img/we-img3.svg" class="lazyload">
 									</div>
 									<div class="we__item-content we__item-content--last">
 										<div class="we__item-name we__item-name--last">
@@ -697,7 +697,7 @@
 							<div class="we__item we__item--first">
 								<div class="we__item-wrapper we__item-wrapper--dashed">
 									<div class="we__item-img">
-										<img src="img/we-img1.svg">
+										<img data-src="img/we-img1.svg" class="lazyload">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -717,7 +717,7 @@
 							<div class="we__item">
 								<div class="we__item-wrapper">
 									<div class="we__item-img">
-										<img src="img/we-img2.svg">
+										<img data-src="img/we-img2.svg" class="lazyload">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -737,7 +737,7 @@
 							<div class="we__item we__item--last">
 								<div class="we__item-wrapper">
 									<div class="we__item-img we__item-img--last">
-										<img src="img/we-img3.svg">
+										<img data-src="img/we-img3.svg" class="lazyload">
 									</div>
 									<div class="we__item-content we__item-content--last">
 										<div class="we__item-name we__item-name--last">
@@ -764,7 +764,7 @@
 							<div class="we__item we__item--first">
 								<div class="we__item-wrapper we__item-wrapper--dashed">
 									<div class="we__item-img">
-										<img src="img/we-img1.svg">
+										<img data-src="img/we-img1.svg" class="lazyload">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -784,7 +784,7 @@
 							<div class="we__item">
 								<div class="we__item-wrapper">
 									<div class="we__item-img">
-										<img src="img/we-img2.svg">
+										<img data-src="img/we-img2.svg" class="lazyload">
 									</div>
 									<div class="we__item-content">
 										<div class="we__item-name">
@@ -804,7 +804,7 @@
 							<div class="we__item we__item--last">
 								<div class="we__item-wrapper">
 									<div class="we__item-img we__item-img--last">
-										<img src="img/we-img3.svg">
+										<img data-src="img/we-img3.svg" class="lazyload">
 									</div>
 									<div class="we__item-content we__item-content--last">
 										<div class="we__item-name we__item-name--last">
@@ -917,7 +917,7 @@
 			<div class="work__box animate__animated wow animate__zoomInDown">
 				<div class="work__item">
 					<div class="work__item-img work__item-img--first">
-						<img src="img/work-img1.svg">
+						<img data-src="img/work-img1.svg" class="lazyload">
 					</div>
 					<div class="work__item-content">
 						<div class="work__item-name">
@@ -931,7 +931,7 @@
 						</div>
 					</div>
 					<div class="work__item-img work__item-img--second">
-						<img src="img/work-img11.svg">
+						<img data-src="img/work-img11.svg" class="lazyload">
 					</div>
 				</div>
 				<div class="work__item">
@@ -949,12 +949,12 @@
 						</div>
 					</div>
 					<div class="work__item-img work__item-img--second">
-						<img src="img/work-img11.svg">
+						<img data-src="img/work-img11.svg" class="lazyload">
 					</div>
 				</div>
 				<div class="work__item">
 					<div class="work__item-img work__item-img--first">
-						<img src="img/work-img3.svg">
+						<img data-src="img/work-img3.svg" class="lazyload">
 					</div>
 					<div class="work__item-content">
 						<div class="work__item-name">
@@ -967,7 +967,7 @@
 						</div>
 					</div>
 					<div class="work__item-img work__item-img--second">
-						<img src="img/work-img11.svg">
+						<img data-src="img/work-img11.svg" class="lazyload">
 					</div>
 				</div>
 				<div class="work__item">
@@ -985,12 +985,12 @@
 						</div>
 					</div>
 					<div class="work__item-img work__item-img--second">
-						<img src="img/work-img11.svg">
+						<img data-src="img/work-img11.svg" class="lazyload">
 					</div>
 				</div>
 				<div class="work__item">
 					<div class="work__item-img work__item-img--first">
-						<img src="img/work-img5.svg">
+						<img data-src="img/work-img5.svg" class="lazyload">
 					</div>
 					<div class="work__item-content">
 						<div class="work__item-name">
@@ -1003,7 +1003,7 @@
 						</div>
 					</div>
 					<div class="work__item-img work__item-img--second">
-						<img src="img/work-img11.svg">
+						<img data-src="img/work-img11.svg" class="lazyload">
 					</div>
 				</div>
 			</div>
@@ -1026,7 +1026,7 @@
 			<div class="why__box">
 				<div class="why__item why__item--first">
 					<div class="why__item-img why__item-img--first">
-						<img src="img/why-img1.svg">
+						<img data-src="img/why-img1.svg" class="lazyload">
 					</div>
 					<div class="why__item-text">
 						На связи любым удобным для Вас способом 24/7: личный кабинет, почта, мессенджер, телефон
@@ -1034,7 +1034,7 @@
 				</div>
 				<div class="why__item why__item--second">
 					<div class="why__item-img why__item-img--second">
-						<img src="img/why-img2.svg">
+						<img data-src="img/why-img2.svg" class="lazyload">
 					</div>
 					<div class="why__item-text">
 						Юристы и бухгалтеры широкого профиля с большим опытом
@@ -1043,7 +1043,7 @@
 				</div>
 				<div class="why__item why__item--last">
 					<div class="why__item-img">
-						<img src="img/why-img3.svg">
+						<img data-src="img/why-img3.svg" class="lazyload">
 					</div>
 					<div class="why__item-text">
 						С нашим сервисом снижаются расходы на персонал
@@ -1068,12 +1068,12 @@
 							<a href="#popup" class="popup-link ask__btn btn--white">Получить консультацию</a>
 						</div>
 						<div class="ask__btn-icon">
-							<img src="img/one-btn-icon.svg">
+							<img data-src="img/one-btn-icon.svg" class="lazyload">
 						</div>
 					</div>
 				</div>
 				<div class="ask__right">
-					<img src="img/ask-img.svg">
+					<img data-src="img/ask-img.svg" class="lazyload">
 				</div>
 			</div>
 		</div>
@@ -1092,7 +1092,7 @@
 						</h2>
 					</div>
 					<div class="serv__img animate__animated wow animate__jackInTheBox">
-						<img src="img/serv-img.svg">
+						<img data-src="img/serv-img.svg" class="lazyload">
 					</div>
 				</div>
 				<div class="serv__right">
@@ -1122,7 +1122,7 @@
 						</h2>
 					</div>
 					<div class="serv__img animate__animated wow animate__jackInTheBox">
-						<img src="img/inc-img.svg">
+						<img data-src="img/inc-img.svg" class="lazyload">
 					</div>
 				</div>
 				<div class="serv__right">
@@ -1152,7 +1152,7 @@
 			<div class="inter__box">
 				<div class="inter__item animate__animated wow animate__jackInTheBox">
 					<div class="inter__item-img">
-						<img src="img/inter-img1.svg">
+						<img data-src="img/inter-img1.svg" class="lazyload">
 					</div>
 					<div class="inter__item-text">
 						После заключения договора с Вами связывается бухгалтер, который будет осуществлять обслуживание
@@ -1161,7 +1161,7 @@
 				</div>
 				<div class="inter__item animate__animated wow animate__jackInTheBox">
 					<div class="inter__item-img">
-						<img src="img/inter-img2.svg">
+						<img data-src="img/inter-img2.svg" class="lazyload">
 					</div>
 					<div class="inter__item-text">
 						Сложные вопросы передаются для решения консультантам
@@ -1169,7 +1169,7 @@
 				</div>
 				<div class="inter__item animate__animated wow animate__jackInTheBox">
 					<div class="inter__item-img">
-						<img src="img/inter-img3.svg">
+						<img data-src="img/inter-img3.svg" class="lazyload">
 					</div>
 					<div class="inter__item-text">
 						Виды связи с бухгалтером: электронная почта, телефон, WatsApp
@@ -1177,7 +1177,7 @@
 				</div>
 				<div class="inter__item animate__animated wow animate__jackInTheBox">
 					<div class="inter__item-img">
-						<img src="img/inter-img4.svg">
+						<img data-src="img/inter-img4.svg" class="lazyload">
 					</div>
 					<div class="inter__item-text">
 						Время подготовки первичных документов — 1 час
@@ -1191,7 +1191,7 @@
 		<div class="container">
 			<div class="footer__top">
 				<div class="footer__logo">
-					<img src="img/logo.svg">
+					<img data-src="img/logo.svg" class="lazyload">
 				</div>
 				<div class="footer__column">
 					<a href="#" class="footer__list">Юридическое сопровождение</a>
@@ -1211,10 +1211,10 @@
 					<a href="tel:79999999999" class="footer__phone">+7 (999) 999-99-99</a>
 					<div class="footer__socials footer__socials--mob">
 						<a href="#" class="footer__socials-link">
-							<img src="img/tg-icon.svg">
+							<img data-src="img/tg-icon.svg" class="lazyload">
 						</a>
 						<a href="#" class="footer__socials-link">
-							<img src="img/fb-icon.svg">
+							<img data-src="img/fb-icon.svg" class="lazyload">
 						</a>
 					</div>
 				</div>
@@ -1222,10 +1222,10 @@
 			<div class="footer__bottom">
 				<div class="footer__socials footer__socials--desk">
 					<a href="#" class="footer__socials-link">
-						<img src="img/tg-icon.svg">
+						<img data-src="img/tg-icon.svg" class="lazyload">
 					</a>
 					<a href="#" class="footer__socials-link">
-						<img src="img/fb-icon.svg">
+						<img data-src="img/fb-icon.svg" class="lazyload">
 					</a>
 				</div>
 				<div class="footer__docs">
