--- a/sites/1_new-lex/index.html
+++ b/sites/1_new-lex/index.html
@@ -1269,7 +1269,7 @@
 	<!-- Magnific Popup JS -->
 	<script async src="libs/magnific-popup/jquery.magnific-popup.min.js"></script>
 	<!-- Wow js -->
-	<script async src="js/wow.min.js"></script>
+	<script src="js/wow.min.js"></script>
 	<script>new WOW().init();</script>
 	<!-- Базовые скрипты javascript -->
 	<script async src="js/main.js"></script>
