new lex animate css подключён правильно

--- a/sites/1_new-lex/index.html
+++ b/sites/1_new-lex/index.html
@@ -11,7 +11,7 @@
 	<!-- Magnific Popup CSS -->
 	<link rel="stylesheet" href="libs/magnific-popup/magnific-popup.css">
 	<!-- Animate CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+	<link rel="stylesheet" href="css/animate.min.css"/>
 	<!-- Базовые стили CSS -->
 	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/main.min.css">
