new lex - шрифты вынесены в html

--- a/sites/1_new-lex/index.html
+++ b/sites/1_new-lex/index.html
@@ -12,8 +12,43 @@
 	<link rel="stylesheet" href="libs/magnific-popup/magnific-popup.css">
 	<!-- Animate CSS -->
 	<link rel="stylesheet" href="css/animate.min.css"/>
+	<!-- Шрифты -->
+	<style>
+		/* Manrope */
+		@font-face {
+		    font-family: 'Manrope';
+		    src: url('../fonts/Manrope/Manrope-Regular.woff2') format('woff2');
+		    font-style: normal;
+		    font-weight: 400;
+		    font-display: swap;
+		}
+
+		@font-face {
+		    font-family: 'Manrope';
+		    src: url('../fonts/Manrope/Manrope-SemiBold.woff2') format('woff2');
+		    font-style: normal;
+		    font-weight: 600;
+		    font-display: swap;
+		}
+
+		@font-face {
+		    font-family: 'Manrope';
+		    src: url('../fonts/Manrope/Manrope-Medium.woff2') format('woff2');
+		    font-style: normal;
+		    font-weight: 500;
+		    font-display: swap;
+		}
+
+		@font-face {
+		    font-family: 'Manrope';
+		    src: url('../fonts/Manrope/Manrope-Light.woff2') format('woff2');
+		    font-style: normal;
+		    font-weight: 300;
+		    font-display: swap;
+		}
+	</style> 
 	<!-- Базовые стили CSS -->
-	<link rel="stylesheet" href="css/fonts.css">
+	<!-- <link rel="stylesheet" href="css/fonts.css"> -->
 	<link rel="stylesheet" href="css/main.min.css">
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
