new lex добавлены недостоющие lazyload

--- a/sites/1_new-lex/index.html
+++ b/sites/1_new-lex/index.html
@@ -11,44 +11,9 @@
 	<!-- Magnific Popup CSS -->
 	<link rel="stylesheet" href="libs/magnific-popup/magnific-popup.css">
 	<!-- Animate CSS -->
-	<link rel="stylesheet" href="css/animate.min.css"/>
-	<!-- Шрифты -->
-	<style>
-		/* Manrope */
-		@font-face {
-		    font-family: 'Manrope';
-		    src: url('../fonts/Manrope/Manrope-Regular.woff2') format('woff2');
-		    font-style: normal;
-		    font-weight: 400;
-		    font-display: swap;
-		}
-
-		@font-face {
-		    font-family: 'Manrope';
-		    src: url('../fonts/Manrope/Manrope-SemiBold.woff2') format('woff2');
-		    font-style: normal;
-		    font-weight: 600;
-		    font-display: swap;
-		}
-
-		@font-face {
-		    font-family: 'Manrope';
-		    src: url('../fonts/Manrope/Manrope-Medium.woff2') format('woff2');
-		    font-style: normal;
-		    font-weight: 500;
-		    font-display: swap;
-		}
-
-		@font-face {
-		    font-family: 'Manrope';
-		    src: url('../fonts/Manrope/Manrope-Light.woff2') format('woff2');
-		    font-style: normal;
-		    font-weight: 300;
-		    font-display: swap;
-		}
-	</style> 
+	<link rel="stylesheet" href="css/animate.min.css" />
 	<!-- Базовые стили CSS -->
-	<!-- <link rel="stylesheet" href="css/fonts.css"> -->
+	<link rel="stylesheet" href="css/fonts.css">
 	<link rel="stylesheet" href="css/main.min.css">
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
@@ -966,7 +931,7 @@
 				</div>
 				<div class="work__item">
 					<div class="work__item-img work__item-img--first">
-						<img src="img/work-img2.svg">
+						<img data-src="img/work-img2.svg" class="lazyload">
 					</div>
 					<div class="work__item-content">
 						<div class="work__item-name">
@@ -1002,7 +967,7 @@
 				</div>
 				<div class="work__item">
 					<div class="work__item-img work__item-img--first">
-						<img src="img/work-img4.svg">
+						<img data-src="img/work-img4.svg" class="lazyload">
 					</div>
 					<div class="work__item-content">
 						<div class="work__item-name">
