добавлен lazyload для bg new lex

--- a/sites/1_new-lex/index.html
+++ b/sites/1_new-lex/index.html
@@ -18,8 +18,8 @@
 	<link rel="stylesheet" href="portfolio-interface/pi.css">
 </head>
 <!-- portfolio interface -->
-<div class="yudevices">
-	<div class="yudevices__phone">
+<div class="yudevices lazyload" data-bgset="portfolio-interface/table-bg.jpg">
+	<div class="yudevices__phone lazyload" data-bgset="portfolio-interface/iphone.svg">
 		<!-- <iframe src="index_mobile.html"></iframe> -->
 	</div>
 </div>
@@ -1271,6 +1271,7 @@
 	<script async src="js/main.js"></script>
 	<script async src="portfolio-interface/pi.js"></script>
 	<script async src="js/lazysizes.min.js"></script>
+	<script async src="js/ls.bgset.min.js"></script>
 </body>
 
 </html>
